k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: prod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: web-app
